# dotfiles-legacy

./: .bash_profile  .gitconfig  .gitignore  .gitmodules  .hgrc  .profile  .sleep  .stglobalignore  .vimrc  .vimrc.swp  .zshrc  Brewfile  Brewfile.lock.json  HotKey.config  README.md  bashrc  dot_chezmoiignore  dot_gitconfig  dot_gitignore  dot_hgignore  dot_hgrc  dot_p10k.zsh  dot_yarnrc  dot_zshrc  gitconfig  gitignore  hgignore  hgrc  install-mac.sh  install.sh  pyproject.toml  ssh-config  zshrc
.ssh/: config
.vim/: .netrwhist
.zsh/: alias.sh  bagpipe.sh  basic.sh  fig_ps1.sh  funcs.sh  gcp.sh  google3.sh  path.sh  terminal.sh
.zsh/hosts/: default  fushimi-imacpro.roam.corp.google.com  hoshimiya.c.googlers.com
IME/: GoogleInputs.txt  Text Substitutions.plist  apple_text_substitutions.plist  convert_googleime_to_apple_substitution_table.py  user_dictionary.db
api/: claude.py  translate.py
api/LLMClient/: Gemini.py  LLMClient.py
dot_utils/api/: dot_DS_Store  readme.md
dot_utils/src/LLMTools/: README.md  dot_pdm-python  pyproject.toml
dot_utils/src/LLMTools/LLMClient/: Gemini.py
dot_zsh/: imports.sh
dot_zsh/zshrc/: accept-suggestion-or-complete.sh  alias.sh  app-google-cloud-sdk.sh  arch.sh.tmpl  completions.sh  corp.sh.tmpl  env-managers.sh  (+5 more)
private_dot_config/: models.toml
private_dot_ssh/: config
ssh/: bbb  home-raspi  hosts  ssh-multiplexing
translate/: README.md  pyproject.toml
translate/src/translate/: __init__.py  main.py
zsh/: alias.sh  app-google-cloud-sdk.sh  arch-specific.sh  default.sh  fzf.sh  imports.sh  path.sh  prompt.sh
(+33 files in other folders)
