[project]
name = "translate"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryohei Fushimi", email = "rfushimi@users.noreply.github.com" }
]
dependencies = [
    "anthropic>=0.28.0",
    "google-generativeai>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/translate"]

[tool.rye.scripts]
translate = { cmd = ["fastapi", "dev"], env-file = ".env" }
