[project]
name = "LLMTools"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Ryohei Fushimi", email = "rfushimi@users.noreply.github.com" },
]
dependencies = [
    "google>=3.0.0",
    "anthropic>=0.40.0",
    "google>=3.0.0",
    "protobuf>=5.29.1",
    "google-generativeai>=0.8.3",
]
readme = "README.md"
requires-python = "==3.13.*"
license = {text = "MIT"}

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llmtools"]

[tool.pdm]
distribution = false
